# pxmcmc

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: draft-pdf.yml  python-app.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/modulesrst/: forward.doctree  mcmc.doctree  measurements.doctree  plotting.doctree  prior.doctree  saving.doctree  transforms.doctree  uncertainty.doctree  utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/modulesrst/: forward.rst.txt  measurements.rst.txt  plotting.rst.txt  prior.rst.txt  saving.rst.txt  transforms.rst.txt  uncertainty.rst.txt  utils.rst.txt
docs/_build/html/modulesrst/: forward.html  mcmc.html  measurements.html  plotting.html  prior.html  saving.html  transforms.html  uncertainty.html  utils.html
docs/aboutrst/: CITATION.rst  CONTRIBUTING.rst  LICENSE.rst
docs/examplesrst/: customops.rst  quickstart.rst
docs/modulesrst/: forward.rst  mcmc.rst  measurements.rst  plotting.rst  prior.rst  saving.rst  transforms.rst  uncertainty.rst  utils.rst
experiments/checkerboard/: checkerboard.py  main.py
experiments/dummy/: dummy.py
experiments/earthtopography/: ETOPO1_Ice_hpx_256.fits  ETOPO1_Ice_mw_noise70.npy  ETOPO1_Ice_mw_noise_block.npy  README.md  main.py  plot.py
experiments/phasevel/: GDM40_L28.npy  README.md  icut_111.npy  main.py  plot.py
experiments/weaklensing/: README.md  download_takahasi.py  main.py  plot.py
paper/: paper.bib  paper.md
pxmcmc/: __init__.py  _version.py  forward.py  mcmc.py  measurements.py  plotting.py  prior.py  prox.py  saving.py  transforms.py  uncertainty.py  utils.py
tests/: conftest.py  test_GCP.py  test_forward.py  test_mcmc.py  test_measurements.py  test_proxes.py  test_pxmcmc.py  test_transforms.py  test_utils.py
