[tool.poetry]
name = "PxMCMC"
version = "1.0.0"
authors = ["Auggie Marignier <augustin.marignier.14@ucl.ac.uk>"]
description = "Proximal Markov Chain Monte Carlo"
homepage = "https://github.com/auggiemarignier/pxmcmc"
repository = "https://github.com/auggiemarignier/pxmcmc"
license = "GPL-3.0-or-later"
documentation = "https://pxmcmc.readthedocs.io/en/latest/index.html"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
pyssht = "^1.4.0"
pys2let = "^2.2.3"
greatcirclepaths = "^1.1.0"
h5py = "^3.3.0"
Cartopy = {version = "^0.19.0", optional = true}
sphinx = {version = "^4", optional = true}
astropy = "^5.0.4"
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
scipy = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.group.dev.dependencies]
pytest-cases = "^3.6.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]
cartopy = ["Cartopy"]